# self-conditioning-experiment

./: README.md  config.py  dataset.py  evaluation.py  experiment.py  llm_client.py  main.py  prompts.py  pyproject.toml  ui.py  words_alpha.txt
output/: self_conditioning_122B_10A_3Q.json  self_conditioning_27B.json  self_conditioning_2B_8Q.json  self_conditioning_35B_3A.json  self_conditioning_35B_3A_8Q.json  self_conditioning_4B.json  self_conditioning_80B_3A.json  self_conditioning_9B.json  self_conditioning_demo.json  standard_demo.json
